sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:14: error: not found: value ecart
    k=i-ecart
        ^AlgShellSort:18: error: not found: value ecart
      k-=ecart
         ^AlgShellSort:20: error: not found: value ecart
    setValeur(k+ecart,v)
                ^