sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var ecart = getNombreValeurs()/2
  while(ecart>0) {
    insertionSort()
    ecart = (ecart.toDouble / 2).toInt
  }
}

def insertionSort() {
  var k = 0
  var v = 0
  for (i<- 1 to getNombreValeurs() -1) {
    k=i-ecart
    v=getValeur(i)
    while((k > 0) && getValeur(k)>v) {
      copie(k-1,k)
      k-=ecart
    }
    setValeur(k+ecart,v)
  }
}